--- a/CharacterBook/Base.lproj/Main.storyboard
+++ b/CharacterBook/Base.lproj/Main.storyboard
@@ -48,35 +48,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P9c-y4-AbB">
-                                <rect key="frame" x="52" y="149" width="286" height="275"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P9c-y4-AbB">
+                                <rect key="frame" x="52" y="149.00000000000003" width="286" height="319.66666666666674"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGn-c3-v36">
-                                <rect key="frame" x="108" y="468" width="174" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGn-c3-v36">
+                                <rect key="frame" x="115" y="501" width="188" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Job Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUK-er-7Hy">
-                                <rect key="frame" x="124" y="562" width="143" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Job Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUK-er-7Hy">
+                                <rect key="frame" x="109" y="555" width="172" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cDr-hq-fb9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="dUK-er-7Hy" firstAttribute="leading" secondItem="cDr-hq-fb9" secondAttribute="leading" constant="124" id="5qm-90-KXR"/>
-                            <constraint firstItem="cGn-c3-v36" firstAttribute="top" secondItem="P9c-y4-AbB" secondAttribute="bottom" constant="44" id="71j-Yc-7JD"/>
-                            <constraint firstItem="cDr-hq-fb9" firstAttribute="bottom" secondItem="dUK-er-7Hy" secondAttribute="bottom" constant="207" id="GnK-b2-Sy1"/>
-                            <constraint firstItem="dUK-er-7Hy" firstAttribute="top" secondItem="cGn-c3-v36" secondAttribute="bottom" constant="53" id="NKD-Oe-LDU"/>
-                            <constraint firstItem="P9c-y4-AbB" firstAttribute="centerX" secondItem="cGn-c3-v36" secondAttribute="centerX" id="Rh5-fq-Qq5"/>
-                            <constraint firstItem="cGn-c3-v36" firstAttribute="centerX" secondItem="dUK-er-7Hy" secondAttribute="centerX" id="VmN-YO-79b"/>
-                            <constraint firstItem="P9c-y4-AbB" firstAttribute="top" secondItem="cDr-hq-fb9" secondAttribute="top" constant="58" id="lIE-Ix-66x"/>
-                            <constraint firstItem="P9c-y4-AbB" firstAttribute="leading" secondItem="cDr-hq-fb9" secondAttribute="leading" constant="52" id="p6r-TQ-4Kr"/>
-                            <constraint firstItem="P9c-y4-AbB" firstAttribute="centerX" secondItem="U8i-2Y-s1d" secondAttribute="centerX" id="rIg-Ww-jMT"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xxO-gT-qtL"/>
                     <connections>
